--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
         <span class="material-symbols-outlined">close</span>
     </button>
     <div class="chatbot">
-      <header><h2>chatbot</h2></header>
+      <header><h2>chatbot</h2>
+      <span class="material-symbols-outlined">close</span>
+      </header>
       <ul class="chatbox">
         <li class="chat incomming">
           <span class="material-symbols-outlined"> smart_toy </span>
           <p>hi there <br> how can i help you</p>
         </li>
-        <li class="chat outgoing">
+        <!-- <li class="chat outgoing">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
 
-          </li>
+          </li> -->
 
       </ul>
       <div class="chat-input">
@@ -36,5 +38,6 @@
 
 
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
